--- a/src/app/components/sections/page-header/page-header.component.html
+++ b/src/app/components/sections/page-header/page-header.component.html
@@ -16,11 +16,15 @@
         </div>
         
     </div>
-    
+
+    <div class="transition">
+        <div></div>
+        <div></div>
+    </div>
 </div>
 <div class="bg-overlay"></div>
 
-<div class="breadcrumb">
+<!-- <div class="breadcrumb">
     
     <p-breadcrumb [model]="this.breadcrumbItems" [home]="home"></p-breadcrumb>
-</div>
+</div> -->
