--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-
+<app-loading></app-loading>
+<app-form-register></app-form-register>
 <div *ngIf="!this.userUI">
   <div class="top-navbar" [class.scrolled]="this.scrolled" [class.hide]="this.topnav.hide">
     <div>
-      <img src="../assets/myras-logo.png" alt="" (click)="this.logout()">
+      <img src="../assets/myras-logo.png" alt="">
     </div>
       
     <div>
@@ -27,14 +28,100 @@
 
 <div *ngIf="this.userUI">
   <div class="user-topbar">
-    <div class="p-grid p-justify-end">
-      <div class="p-col-2" style="line-height: 80px; text-align: center;">
-        <p-button class="btn-signout" label="Log out" (click)="this.logout()"></p-button>
+    <!-- <div class="theader">
+      <span>MyRAS</span>
+    </div> -->
+    <div class="tbody">
+      <div class="topbar-items">
+        <!-- <div class="topbar-item">
+          <i class="fas fa-bell"></i>
+          <span>Notification</span>
+        </div>
+        <div class="topbar-item">
+          <i class="fas fa-comment-alt"></i>
+          <span>Chat</span>
+        </div> -->
+        <div class="topbar-item" (click)="this.logout()">
+          <i class="fas fa-sign-out-alt"></i>
+          <span>Logout</span>
+        </div>
       </div>
+      <!-- <div class="p-grid p-justify-end">
+        <div class="p-col-2" style=" text-align: center;">
+          <i class="fas fa-sign-out-alt"></i>
+        </div>
+      </div> -->
+    </div>
+    
+  </div>
+
+  
+  <div class="left-menu">
+    <div class="logo">
+      <i class="fa fa-align-justify"></i>
+      <!-- <div>Pure CSS Accordion Nav</div> -->
+    </div>
+    <div class="accordion">
+      <div class="section" *ngFor="let item of this.sidebar.items; let x = index;">
+        <input [id]="'section-' + (x + 1)" type="radio" name="accordion-1" value="toggle"/>
+        <label [for]="'section-' + (x + 1)" [routerLink]="item.path"><span> {{ item.label }} </span></label>
+        <div class="content" *ngIf="item.childs">
+          <ul>
+            <li *ngFor="let child of item.childs" [routerLink]="child.path"><i [class]="child.icon"></i><span>{{ child.label }}</span></li>
+            
+          </ul>
+        </div>
+      </div>
+      
+      <!-- <div class="section">
+        <input id="section-1" type="radio" name="accordion-1" value="toggle"/>
+        <label for="section-1"><span>Messages</span></label>
+        <div class="content">
+          <ul>
+            <li><i class="fa fa-inbox"></i><span>Inbox</span></li>
+            <li><i class="fa fa-share"></i><span>Sent</span></li>
+            <li><i class="fa fa-archive"></i><span>Archive</span></li>
+            
+          </ul>
+        </div>
+      </div>
+      <div class="section">
+        <input id="section-2" type="radio" name="accordion-1" value="toggle"/>
+        <label for="section-2"> <span>Usage</span></label>
+        <div class="content">
+          <ul>
+            <li><i class="fa fa-cog"></i><span>System</span></li>
+            <li><i class="fa fa-group"></i><span>Users</span></li>
+            <li><i class="fa fa-sitemap"></i><span>Visitation</span></li>
+          </ul>
+        </div>
+      </div>
+      <div class="section">
+        <input id="section-3" type="radio" name="accordion-1" value="toggle"/>
+        <label for="section-3"> <span>Scroller</span></label>
+        <div class="content">
+          <ul>
+            <li><i class="fa fa-coffee"></i><span>Need Coffee</span></li>
+            <li><i class="fa fa-coffee"></i><span>Need Coffee</span></li>
+            <li><i class="fa fa-coffee"></i><span>Need Coffee</span></li>
+            <li><i class="fa fa-coffee"></i><span>Need Coffee</span></li>
+            <li><i class="fa fa-coffee"></i><span>Need Coffee</span></li>
+            <li><i class="fa fa-coffee"></i><span>Need Coffee</span></li>
+            <li><i class="fa fa-coffee"></i><span>Need Coffee</span></li>
+            <li><i class="fa fa-coffee"></i><span>Need Coffee</span></li>
+            <li><i class="fa fa-coffee"></i><span>Need Coffee</span></li>
+          </ul>
+        </div>
+      </div>
+      <div class="section">
+        <input id="section-4" type="radio" name="accordion-1" value="toggle"/>
+        <label for="section-4"> <span>Section 4</span></label>
+        <div class="content"></div>
+      </div> -->
     </div>
   </div>
   
-  <div class="user-sidenav">
+  <!-- <div class="user-sidenav">
     <div class="logo">
       <img src="../assets//myras-logo.png" alt="">
     </div>
@@ -64,7 +151,7 @@
         </ul>   
       </p-accordionTab>
   </p-accordion>
-  </div>
+  </div> -->
   
   <div class="user-body">
     <router-outlet></router-outlet>
