--- a/src/app/components/pages/login/login.component.scss
+++ b/src/app/components/pages/login/login.component.scss
@@ -44,6 +44,27 @@
         z-index: 2;
     }
 }
+.btn-close {
+    position: relative;
+    float: right;
+  
+    height: 100px;
+    width: 100px;
+  
+    line-height: 100px;
+    text-align: center;
+  
+    font-size: 30px;
+  
+    color: #a5a5a5;
+  
+    z-index: 99;
+  
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
 .wrapper {
     position: relative;
 
@@ -88,6 +109,10 @@
                 transform: translate(-50%, -50%);
                 max-height: 90px;
                 height: 10vw;
+
+                &:hover {
+                    cursor: pointer;
+                }
             }
 
             @keyframes bgAnim {
@@ -201,6 +226,15 @@
 
                             & > span {
                                 padding: 5px;
+                            }
+
+                            & > .hlink {
+                                text-decoration: none;
+
+                                &:hover {
+                                    cursor: pointer;
+                                    text-decoration: underline;
+                                }
                             }
                             
                         }
