--- a/src/app/components/sections/page-header/page-header.component.scss
+++ b/src/app/components/sections/page-header/page-header.component.scss
@@ -1,18 +1,47 @@
+@import '../../../theme/colors.scss';
+
 .wrapper {
-    position: relative;
+    position: relative; 
 
     width: 100%;
-    height: calc(100% - 60px); // 60px for breadcrumb
+    height: 100%; // 60px for breadcrumb
 
+
+    & > .transition {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+
+        height: 100px;
+        width: 100%;
     
+        & > div {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+
+            height: 100%;
+            width: 100%;
+
+            &:nth-child(1) {
+                height: 90%;
+                background-color: $color-side;
+                clip-path: polygon(50% 40%, 100% 0, 100% 100%, 0 100%, 0 0);
+            }
+            &:nth-child(2) {
+                background-color: $color-bg-light;
+                clip-path: polygon(50% 90%, 100% 0, 100% 100%, 0 100%, 0 0);
+            }
+        }
+    
+        z-index: 10;
+      }
 
     & > .wcenter {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-
-        
 
         & > .aos-anim {
             position: relative;
@@ -56,6 +85,7 @@
 
     z-index: 0;
 }
+
 
 .breadcrumb {
     position: relative;
