--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+
 body {
     margin: 0;
     padding: 0;
 
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
+
+    overflow-x: hidden;
 }
+
